Correct source code on all pages. Add further info on readme file

--- a/alphabet.html
+++ b/alphabet.html
@@ -38,30 +38,33 @@
     <h1 id="logo">The Hebrew Alphabet</h1>
     <div class="main-container">
         <div id="alphabet-introduction">
-            <img id="alphabet-picture" src="assets/images/bereshit_1.jpg" alt="image of an illuminated Hebrew manuscript with red and blue being the 
-                    dominant colours which contains the first passage from the Hebrew Bible in Hebrew language">
+            <img id="alphabet-picture" src="assets/images/bereshit_1.jpg"
+                alt="image of an illuminated Hebrew manuscript decorated in red and blue colors containing the first passage of the Hebrew Bible ">
         </div>
         <h2>Main points</h2>
-        <ul>
-            <li>
-                <a href="#intro-alphabet">Introduction to the Hebrew Alphabet</a>
-            </li>
-            <li>
-                <a href="#hebrew-letters">The Hebrew Letters</a>
-            </li>
-            <li>
-                <a href="#table">Hebrew alphabet table</a>
-            </li>
-            <li>
-                <a href="#vowels-dots">Vowels and Dots</a>
-            </li>
-            <li>
-                <a href="#pronunciation">Pronunciation</a>
-            </li>
-            <li>
-                <a href="#practice">Listening and speaking practice</a>
-            </li>
-        </ul>
+        <div id="main-points">
+            <ul>
+                <li>
+                    <a href="#intro-alphabet">Introduction to the Hebrew Alphabet</a>
+                </li>
+                <li>
+                    <a href="#hebrew-letters">The Hebrew Letters</a>
+                </li>
+                <li>
+                    <a href="#table">Hebrew alphabet table</a>
+                </li>
+                <li>
+                    <a href="#vowels-dots">Vowels and Dots</a>
+                </li>
+                <li>
+                    <a href="#pronunciation">Pronunciation</a>
+                </li>
+                <li>
+                    <a href="#practice">Listening and speaking practice</a>
+                </li>
+            </ul>
+        </div>
+
         <h2 id="intro-alphabet">Introduction to the Hebrew Alphabet</h2>
         <p>
             The Hebrew Alphabet has been used throughout the past two millennia mainly as a script for Biblical
@@ -88,7 +91,7 @@
         </p>
 
         <p>Aleph is the first letter of the alphabet and Beth is the second. In Hebrew, the alphabet is called
-            <i>Aleph-Bet</i> (אָלֶפְבֵּית) to reflect the first two letters of the alphabet.
+            <i>Aleph-Bet</i> (אלףבית) to reflect the first two letters of the alphabet.
         </p>
         <h3 class="clear">Dagesh</h3>
         <p>
@@ -109,15 +112,16 @@
         <p>
             Hebrew Language like other Semitic languages has guttural sounds, these are pronounced near the back of
             the throat. There are 5 guttural letters in Hebrew:
-            <ul>
-                <li>Resh ר‎ - is pronounced as rolled [r] similar to the French word <i>restaurant</i>. </li>
-                <li>Ayin ע - pronounced as if you're clearing your throat.</li>
-                <li>Chet ח is pronounced as [ch] as in Bach. </li>
-                <li>Hey ה - is a very soft [h].</li>
-                <li>Aleph א - also called a glottal stop, is type of consonantal sound that is produced by
-                    obstructing airflow in the vocal tract, hence Aleph has no sound, it’s like a pause.</li>
-            </ul>
         </p>
+        <ul>
+            <li>Resh ר‎ - is pronounced as rolled [r] similar to the French word <i>restaurant</i>. </li>
+            <li>Ayin ע - pronounced as if you're clearing your throat.</li>
+            <li>Chet ח is pronounced as [ch] as in Bach. </li>
+            <li>Hey ה - is a very soft [h].</li>
+            <li>Aleph א - also called a glottal stop, is type of consonantal sound that is produced by
+                obstructing airflow in the vocal tract, hence Aleph has no sound, it’s like a pause.</li>
+        </ul>
+
 
         <!--Hebrew Alphabet Table-->
         <h2 id="table">Hebrew alphabet table</h2>
@@ -357,30 +361,29 @@
         </p>
         <h2 id="practice">Listening and speaking practice</h2>
         <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
-            learn
-            them. So, a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
-            practice the Hebrew letters and vowels. We encourage you to say the letters out loud and practice them
-            yourself!
+            learn them.
         </p>
         <p>
             Don't be discouraged if you don't get it right initially, there are many letters in Hebrew that can be
             difficult for non-native speakers to pronounce, the goal for now is to enjoy the learning process!
         </p>
         <p>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts"
-                        target="_blank">Hebrew alphabet practice -
-                        YouTube video</a>.
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
-                        target="_blank">Vowel practice - YouTube video</a>.
-
-                </li>
-            </ul>
+            So, a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
+            practice the Hebrew letters and vowels. We encourage you to say the letters out loud and practice them
+            yourself!
         </p>
+        <ul>
+            <li>
+                <a href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts" target="_blank">Hebrew
+                    alphabet practice -
+                    YouTube video</a>.
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
+                    target="_blank">Vowel practice - YouTube video</a>.
 
+            </li>
+        </ul>
     </div>
 
     <!-- Footer -->
