--- a/index.html
+++ b/index.html
@@ -49,25 +49,27 @@
     <section>
         <div class="main-container">
             <h2>Main points</h2>
-            <ul>
-                <li>
-                    <a href="#introduction">Introduction to the Hebrew Language</a>
-                </li>
-                <li>
-                    <a href="#Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
-                </li>
-                <li>
-                    <a href="#revival">Revival of the Hebrew Language</a>
-                </li>
-                <li>
-                    <a href="#modern-day">Modern-day Hebrew</a>
-                </li>
-            </ul>
+            <div id="main-points">
+                <ul>
+                    <li>
+                        <a href="#introduction">Introduction to the Hebrew Language</a>
+                    </li>
+                    <li>
+                        <a href="#Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
+                    </li>
+                    <li>
+                        <a href="#revival">Revival of the Hebrew Language</a>
+                    </li>
+                    <li>
+                        <a href="#modern-day">Modern-day Hebrew</a>
+                    </li>
+                </ul>
+            </div>
 
             <!-- Introduction -->
             <h2 id="introduction">Introduction to the Hebrew Language</h2>
             <p>
-                Hebrew (עִבְרִית‎) is a Northwest Semitic language (or Northern Central), that belongs to the
+                Hebrew (עברית) is a Northwest Semitic language (or Northern Central), that belongs to the
                 Afroasiatic language family. Historically, it is regarded as the language of the Israelites, Judeans
                 and their ancestors. It is the only Canaanite language still spoken and the only truly successful
                 example of a revived dead language, and one of only two Northwest Semitic languages still spoken,
@@ -160,8 +162,9 @@
             </p>
             <h2 id="modern-day">Modern-day Hebrew</h2>
             <p>
-                According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
-                    target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
+                According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew" target="_blank"
+                    rel="noopener" aria-label="This is a Wikipedia link (opens in a new tabF">Wikipedia</a> around 53%
+                of the Israeli population speaks Hebrew as a native
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
                 Russian, Arabic, French, English, Yiddish, and Ladino.
