Remove data from alphabet table

--- a/alphabet.html
+++ b/alphabet.html
@@ -13,7 +13,7 @@
     <title>Hebrew Language</title>
 </head>
 
-<!-- Navigation bar--> 
+<!-- Navigation bar-->
 
 <body>
     <header>
@@ -39,7 +39,7 @@
     <div class="main-container">
         <div id="alphabet-introduction">
             <img id="alphabet-picture" src="assets/images/bereshit_1.jpg"
-                alt="image of an illuminated Hebrew manuscript decorated in red and blue colors containing the first passage of the Hebrew Bible ">
+                alt="image of an illuminated Hebrew manuscript decorated in red and blue colors containing the first passage of the Hebrew Bible">
         </div>
         <h2>Main points</h2>
         <div id="main-points">
@@ -96,7 +96,7 @@
         <h3 class="clear">Dagesh</h3>
         <p>
             In modern Hebrew, the dagesh (lit. emphasis) is an accent placed in the middle of a letter that changes
-            the pronunciation of ב‎ bet, כ‎ kaf, and פ‎ pe into [v], [ch] and [f]. We've added a column for
+            the pronunciation of ב‎ bet, כ‎ kaf, and פ‎ pe into [v], [ch] and [f]. We've added the
             pronunciation without dagesh to the table below, so it's easy to see the difference between the sounds.
         </p>
         <h3>Final Letters</h3>
@@ -123,179 +123,119 @@
         </ul>
 
         <!--Hebrew Alphabet Table-->
-        <h2 id="table">Hebrew alphabet table</h2>
         <div id="alphabet-table">
+            <h2 id="table">Hebrew alphabet table</h2>
             <table>
                 <tr>
-                    <th>Letter Name</th>
-                    <th>Form</th>
-                    <th>Modern Hebrew Pronunciation</th>
-                    <th>Pronunciation without Dagesh</th>
+                    <th>Letter Name / Form</th>
+                    <th>Pronunciation</th>
                     <th>Final form</th>
                 </tr>
                 <tr>
-                    <td>Aleph</td>
-                    <td>א</td>
+                    <td>Aleph / א</td>
                     <td>Silent</td>
                     <td>-</td>
+                </tr>
+                <tr>
+                    <td>Bet / בּ‎</td>
+                    <td>[b] / [v]</td>
                     <td>-</td>
                 </tr>
                 <tr>
-                    <td>Bet</td>
-                    <td>בּ‎</td>
-                    <td>[b]</td>
-                    <td>[v]</td>
-                    <td>-</td>
-
-                </tr>
-                <tr>
-                    <td>Vet</td>
-                    <td>ב</td>
-                    <td>[v]</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Gimel</td>
-                    <td>ג</td>
+                    <td>Gimel / ג</td>
                     <td>[g]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Dalet</td>
-                    <td>ד</td>
+                    <td>Dalet / ד</td>
                     <td>[d]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Hey</td>
-                    <td>ה</td>
+                    <td>Hey / ה</td>
                     <td>[h]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Vav</td>
-                    <td>ו</td>
-                    <td>[v]</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Zayin</td>
-                    <td>ז</td>
+                    <td>Zayin / ז</td>
                     <td>[z]</td>
                     <td>-</td>
+                </tr>
+                <tr>
+                    <td>Chet / ח</td>
+                    <td>[kh]</td>
                     <td>-</td>
                 </tr>
                 <tr>
-                    <td>Chet</td>
-                    <td>ח</td>
-                    <td>Kh</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Tet</td>
-                    <td>ט</td>
+                    <td>Tet / ט</td>
                     <td>[t]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Yud</td>
-                    <td>י</td>
+                    <td>Yud / י</td>
                     <td>[i]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Kaf</td>
-                    <td>כ</td>
-                    <td>[kh]</td>
-                    <td>[ch] as in <i>loch</i></td>
+                    <td>Kaf / כ</td>
+                    <td>[kh] / [ch] as in <i>loch</i></td>
                     <td>ך</td>
                 </tr>
                 <tr>
-                    <td>Lamed</td>
-                    <td>ל‎</td>
+                    <td>Lamed / ל‎</td>
                     <td>[l]</td>
-                    <td>-</td>
                     <td>-</td>
                 </tr>
                 <tr>
-                    <td>Mem</td>
-                    <td>מ‎</td>
+                    <td>Mem / מ‎</td>
                     <td>[m]</td>
-                    <td>-</td>
                     <td>ם</td>
                 </tr>
                 <tr>
-                    <td>Nun</td>
-                    <td>נ</td>
+                    <td>Nun / נ</td>
                     <td>[n]</td>
-                    <td>-</td>
                     <td>ן‎</td>
 
                 </tr>
                 <tr>
-                    <td>Samekh</td>
-                    <td>ס</td>
+                    <td>Samekh / ס</td>
                     <td>[s]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Ayin</td>
-                    <td>ע</td>
+                    <td>Ayin / ע</td>
                     <td>Silent</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Pe</td>
-                    <td>פ‎</td>
-                    <td>[p]</td>
-                    <td>[f]</td>
+                    <td>Pe / פ‎</td>
+                    <td>[p] / [f]</td>
                     <td>ף</td>
 
                 </tr>
                 <tr>
-                    <td>Tzadi</td>
-                    <td>צ‎</td>
+                    <td>Tzadi / צ‎</td>
                     <td>[ts]</td>
-                    <td>-</td>
                     <td>ץ‎</td>
-
                 </tr>
                 <tr>
-                    <td>Qof</td>
-                    <td>ק</td>
+                    <td>Qof / ק</td>
                     <td>[K]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Resh</td>
-                    <td>ר‎</td>
+                    <td>Resh / ר‎</td>
                     <td>[r]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Shin</td>
-                    <td>שׁ‎/שׂ‎</td>
+                    <td>Shin / שׁ‎/שׂ‎</td>
                     <td>[sh]/[s]</td>
                     <td>-</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Tav</td>
-                    <td>ת‎</td>
+                    <td>Tav / ת‎</td>
                     <td>[t]</td>
-                    <td>-</td>
                     <td>-</td>
                 </tr>
             </table>
