--- a/words.html
+++ b/words.html
@@ -52,7 +52,7 @@
                 you') which is also a traditional song sung by Jews every Friday night upon returning home
                 from synagogue prayer on the eve of the Shabbat.
             </p>
-            <h2 lang="he"><i>Ken</i> (כן) and <i>Lo</i> (לֹא)</h2>
+            <h2><i>Ken</i> (כן) and <i>Lo</i> (לֹא)</h2>
             <p>
                 <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which
                 literally
