Change table layout on Home page. Change media queries to adjust to these changes

--- a/alphabet.html
+++ b/alphabet.html
@@ -41,8 +41,8 @@
             <img id="alphabet-picture" src="assets/images/bereshit_1.jpg"
                 alt="image of an illuminated Hebrew manuscript decorated in red and blue colors containing the first passage of the Hebrew Bible">
         </div>
-        <h2>Main points</h2>
         <div id="main-points">
+            <h2>Main points</h2>
             <ul>
                 <li>
                     <a href="#intro-alphabet">Introduction to the Hebrew Alphabet</a>
@@ -127,116 +127,268 @@
             <h2 id="table">Hebrew alphabet table</h2>
             <table>
                 <tr>
-                    <th>Letter Name / Form</th>
+                    <th>Letter Name</th>
+                    <td>Aleph</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>א</td>
+                </tr>
+                <tr>
                     <th>Pronunciation</th>
-                    <th>Final form</th>
-                </tr>
-                <tr>
-                    <td>Aleph / א</td>
                     <td>Silent</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Bet / בּ‎</td>
+                    <th>Letter Name</th>
+                    <td>Bet</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>בּ‎ / ב</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[b] / [v]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Gimel / ג</td>
+                    <th>Letter Name</th>
+                    <td>Gimel</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ג</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[g]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Dalet / ד</td>
+                    <th>Letter Name</th>
+                    <td>Dalet</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ד</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[d]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Hey / ה</td>
+                    <th>Letter Name</th>
+                    <td>Hey</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ה</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[h]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Zayin / ז</td>
+                    <th>Letter Name</th>
+                    <td>Vav</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ו</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <td>[v]</td>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Zayin</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ז</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[z]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Chet / ח</td>
+                    <th>Letter Name</th>
+                    <td>Chet</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ח</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[kh]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Tet / ט</td>
+                    <th>Letter Name</th>
+                    <td>Tet</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ט</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[t]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Yud / י</td>
+                    <th>Letter Name</th>
+                    <td>Yud</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>י</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[i]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Kaf / כ</td>
-                    <td>[kh] / [ch] as in <i>loch</i></td>
-                    <td>ך</td>
+                    <th>Letter Name</th>
+                    <td>Kaf</td>
                 </tr>
                 <tr>
-                    <td>Lamed / ל‎</td>
+                    <th>Form / Final Form</th>
+                    <td>ך / כ</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <td>כּ‎ [kh] / כ‎ [ch] as in <i>loch</i></td>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Lamed</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ל‎</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[l]</td>
-                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Mem / מ‎</td>
-                    <td>[m]</td>
-                    <td>ם</td>
+                    <th>Letter Name</th>
+                    <td>Mem</td>
                 </tr>
                 <tr>
-                    <td>Nun / נ</td>
-                    <td>[n]</td>
-                    <td>ן‎</td>
-
+                    <th>Form / Final Form</th>
+                    <td>מ‎ / ם</td>
                 </tr>
                 <tr>
-                    <td>Samekh / ס</td>
-                    <td>[s]</td>
-                    <td>-</td>
+                    <th>Pronunciation</th>
+                    <th>[m]</th>
                 </tr>
                 <tr>
-                    <td>Ayin / ע</td>
-                    <td>Silent</td>
-                    <td>-</td>
+                    <th>Letter Name</th>
+                    <td>Nun</td>
                 </tr>
                 <tr>
-                    <td>Pe / פ‎</td>
-                    <td>[p] / [f]</td>
-                    <td>ף</td>
-
+                    <th>Form / Final Form</th>
+                    <td>ן / נ‎‎</td>
                 </tr>
                 <tr>
-                    <td>Tzadi / צ‎</td>
-                    <td>[ts]</td>
-                    <td>ץ‎</td>
+                    <th>Pronunciation</th>
+                    <th>[n]</th>
                 </tr>
                 <tr>
-                    <td>Qof / ק</td>
-                    <td>[K]</td>
-                    <td>-</td>
+                    <th>Letter Name</th>
+                    <td>Samekh</td>
                 </tr>
                 <tr>
-                    <td>Resh / ר‎</td>
-                    <td>[r]</td>
-                    <td>-</td>
+                    <th>Form</th>
+                    <td>ס</td>
                 </tr>
                 <tr>
-                    <td>Shin / שׁ‎/שׂ‎</td>
-                    <td>[sh]/[s]</td>
-                    <td>-</td>
+                    <th>Pronunciation</th>
+                    <th>[s]</th>
                 </tr>
                 <tr>
-                    <td>Tav / ת‎</td>
+                    <th>Letter Name</th>
+                    <td>Ayin</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ע</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <th>Silent</th>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Pe</td>
+                </tr>
+                <tr>
+                    <th>Form / Final Form</th>
+                    <td>פּ‎ / ף</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <td>פּ‎ [p] / פ‎ [f]</td>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Tzadi</td>
+                </tr>
+                <tr>
+                    <th>Form / Final Form</th>
+                    <td>צ‎ / ץ‎</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <th>[ts]</th>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Qof</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ק</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <th>[K]</th>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Resh</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ר‎</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <th>[r]</th>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Shin</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>שׁ‎ / שׂ‎</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
+                    <th>[sh] / [s]</th>
+                </tr>
+                <tr>
+                    <th>Letter Name</th>
+                    <td>Tav</td>
+                </tr>
+                <tr>
+                    <th>Form</th>
+                    <td>ת‎</td>
+                </tr>
+                <tr>
+                    <th>Pronunciation</th>
                     <td>[t]</td>
-                    <td>-</td>
                 </tr>
             </table>
         </div>
